# hivemind_contrib

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  AUTHORS.rst  HISTORY.rst  Makefile  README.rst  optional-requirements.txt  project.config  requirements.txt  rules.pl  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  pydist-overrides  rules
docs/: conf.py  index.rst  installation.rst  usage.rst
hivemind_contrib/: .repo.py.swp  __init__.py  allocations.py  code.py  debpackaging.py  designate.py  freshdesk.py  gerrit.py  gitea.py  glance.py  iptables.py  keystone.py  libvirt.py  log.py  melbourne.py  murano.py  neutron.py  notification.py  nova.py  ospurge.py  packages.py  packaging.py  pbuilder.py  placement.py  rabbit.py  rcshibboleth.py  removed.py  repo.py  reporting.py  reports.py  security.py  show.py  ssh_vm.py  swift.py  upgrade.py
hivemind_contrib/nectar/: __init__.py  keystone.py
hivemind_contrib/puppetdb/: puppetdb.py  tasks.py
hivemind_contrib/templates/: 20160105-outage-notification.tmpl  201708_instances_forced_reboot.tmpl  20170913_netapp2ceph_service_resume.tmpl  heartbleed.tmpl  instances-inactive.tmpl  instances-shutoff.tmpl  instances_forced_reboot.tmpl  intersect-maintenance.tmpl  libvirt_upgrade_reboot.tmpl  netapp2ceph_service_resume.tmpl  node_crash.tmpl  np-rcc86-inactive.tmpl  np-rcc86-shutoff.tmpl  outage-notification.tmpl  outage-notification02.tmpl  please_reboot_instances.tmpl  schedule-for-deletion.tmpl  single_node.tmpl  test.tmpl  trove_instance_upgrade.tmpl  trove_instance_upgrade_mysql.tmpl  trove_instance_upgrade_postgresql.tmpl  upgrade-notice.tmpl
hivemind_contrib/tests/: test_glance.py  (+2 more)
melbourne-tools/: README.md  setup.py
tests/: test_glance.py  test_hivemind_contrib.py  test_iptables.py  test_nova.py  test_swift.py
(+5 files in other folders)
