[metadata]
name = hivemind-contrib
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = A collection of plugins for use with Hivemind
description_file =
    README.rst
keywords = hivemind
home_page = https://github.com/NeCTAR-RC/python-hivemind_contrib
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = hivemind_contrib
include_package_data = True

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
hivemind.modules =
    code = hivemind_contrib.code
    designate = hivemind_contrib.designate
    gerrit = hivemind_contrib.gerrit
    gitea = hivemind_contrib.gitea
    glance = hivemind_contrib.glance
    iptables = hivemind_contrib.iptables
    keystone = hivemind_contrib.keystone
    libvirt = hivemind_contrib.libvirt
    melbourne = hivemind_contrib.melbourne
    murano = hivemind_contrib.murano
    notification = hivemind_contrib.notification
    nova = hivemind_contrib.nova
    ospurge = hivemind_contrib.ospurge
    packages = hivemind_contrib.packages
    packaging = hivemind_contrib.debpackaging
    pbuilder = hivemind_contrib.pbuilder
    placement = hivemind_contrib.placement
    puppetdb = hivemind_contrib.puppetdb.tasks
    repo = hivemind_contrib.repo
    reporting = hivemind_contrib.reporting
    reports = hivemind_contrib.reports
    swift = hivemind_contrib.swift
